--- a/CalculadorGorjeta/index.html
+++ b/CalculadorGorjeta/index.html
@@ -1,56 +1,44 @@
-<head>
-    <title> Calculadora de Gorjetas</title>
-  </head><!DOCTYPE html>
-  <html lang="en">
-    <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link rel="stylesheet" href="style.css" />
-      <title>Calculadora de Gorjetas</title>
-    </head>
-    <body>
-      <div id="container">
-        <div>
-          <h1 class="title">Calculadora de Gorjetas</h1>
-        </div>
-  
-        <div>
-          <form class="tipsForm">
-            <label for="bill">
-              <p>Quanto ficou a conta?</p>
-            </label>
-            <p>
-              R$ <input type:"number" placeholder="100" name="bill" id="bill"
-              class="formInput">
-            </p>
-            <label for="serviceQual">
-              <p>Qual foi o porcento da sua gorjeta?</p>
-            </label>
-            <p>
-              <select name="serviceQual" id="serviceQual" class="formSelect">
-                <option disabled selected value="0">-- Escolha uma opção?</option>
-                <option value="0,0">0% - Pessímo</option>
-                <option value="0,05">5% - Ruim</option>
-                <option value="0,1">10% - Ok</option>
-                <option value="0,2">20% - Bom</option>
-                <option value="0,3">30% - Otimo</option>
-              </select>
-            </p>
-            <label for="people">
-              <p>Quantas pessoas vão dividir a conta?</p>
-            </label>
-            <p>
-              <input
-                type="number"
-                placeholder="1"
-                name="people"
-                id="people"
-                class="formInput"
-              />Pessoa(s)
-            </p>
-            <button type="submit" class="formSubmit">Calcular!</button>
-          </form>
-        </div>
-      </div>
-    </body>
-  </html>
+<!DOCTYPE html>
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Calculadora de Gorjetas</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div id="container">
+      <h1 class="title">Calculadora de Gorjetas</h1>
+
+      <form class="tipsForm" id="tipsForm">
+        <label for="bill"><p>Quanto ficou a conta?</p></label>
+        <p>
+          R$ <input type="number" placeholder="100" name="bill" id="bill" class="formInput">
+        </p>
+
+        <label for="serviceQual"><p>Qual foi o porcento da sua gorjeta?</p></label>
+        <p>
+          <select name="serviceQual" id="serviceQual" class="formSelect">
+            <option disabled selected value="0">-- Escolha uma opção --</option>
+            <option value="0.0">0% - Péssimo</option>
+            <option value="0.05">5% - Ruim</option>
+            <option value="0.1">10% - Ok</option>
+            <option value="0.2">20% - Bom</option>
+            <option value="0.3">30% - Ótimo</option>
+          </select>
+        </p>
+
+        <label for="people"><p>Quantas pessoas vão dividir a conta?</p></label>
+        <p>
+          <input type="number" placeholder="1" name="people" id="people" class="formInput" /> Pessoa(s)
+        </p>
+
+        <button type="submit" class="formSubmit">Calcular!</button>
+      </form>
+
+      <div id="result" style="text-align:center; margin-top: 20px; font-weight: bold;"></div>
+    </div>
+
+    <script src="script.js"></script>
+  </body>
+</html>
